--- a/txt/sts14/sts14-ntnu.tex
+++ b/txt/sts14/sts14-ntnu.tex
@@ -24,6 +24,7 @@
 \usepackage{array}
 \usepackage{units}
 \usepackage{multirow}
+\usepackage{paralist}
 
 %\setlength\titlebox{5cm}
 
@@ -63,7 +64,7 @@
 \begin{document}
 \maketitle
 \begin{abstract}
-  This paper describes the system submitted by the NTNU team to the SemEval 2014 shared task 10 (Semantic Textual Similarity). It combines baseline semantic distance metrics from the 2013 submission with measures based on lexical soft cardinality and character n-gram feature representations. The final system is based on bagged support vector machine (SVM) regression on earlier shared task datasets and shows competetive performance in the shared task evaluation.
+  This paper describes the system submitted by the NTNU team to the SemEval 2014 shared task 10 (Semantic Textual Similarity). It combines baseline lexical distance metrics from the 2013 Takelab baseline system with measures based on lexical soft cardinality and character n-gram feature representations. The final system is based on bagged support vector machine (SVM) regression on earlier shared task datasets and shows competetive performance in the shared task evaluation.
 \end{abstract}
 
 \input{intro}
