--- a/txt/sts14/softcard.tex
+++ b/txt/sts14/softcard.tex
@@ -61,7 +61,7 @@ Finally, iteratively, the parameter search space was explored using
 hill-climbing until optimal Pearson's correlation was reached. As no
 training data was explicitly provided for the STS evaluation campaign
 this year, we used different training sets from past campaigns for
-the new test sets. The criteria for the assignment of training-test
+the new test sets. The criteria for assignming the training-test
 sets pairs was by their closeness of average character length.
 The selected training-test sets pairs are shown in Table~\ref{tab:training-test-sets}
 and the optimal training parameters in Table~\ref{tab:Optimal-parameters}.
