--- a/txt/sts14/sts14-ntnu.tex
+++ b/txt/sts14/sts14-ntnu.tex
@@ -90,7 +90,15 @@ best overall (on weighted mean over all six datasets).
 
 \input{results}
 
-% add Takelab acknowledgement
+\section*{Acknowledgements}
+\label{sec:acknowledgements}
+
+This paper and submission was made possible with the support from Department of Computer and Information Science (IDI), Norwegian University of Science and Technology (NTNU), Norway and with support from the “ALAIN BENSOUSSAN” FELLOWSHIP PROGRAMME, 2012-2013.
+
+This system is partly based on code made available by Text Analysis and Knowledge Engineering Laboratory,
+Department of Electronics, Microelectronics, Computer and Intelligent Systems,
+Faculty of Electrical Engineering and Computing,
+University of Zagreb.
 
 \bibliographystyle{acl}
 \bibliography{sts14-ntnu}
