--- a/txt/sts14/subrep-measures.tex
+++ b/txt/sts14/subrep-measures.tex
@@ -3,8 +3,8 @@
 
 We have created a set of similarity measures based on induced representations of character n-grams. The measures are based on similarity between document vectors, here the centroid of the individual term vector representations, which are trained on character n-grams rather than full words. The vector representation are induced in an unsupervised manner from large unannotated corpora using word clustering, topic learning and word representation learning methods.
 
-In order to learn the representation vectors, the text was preprocessed by removing punctuation and extra whitespace, replacing numbers with their single digit word (`one', `two', etc.), and lowercasing all text. Character n-grams including whitespace were then generated from this text. We then trained Brown Clusters \cite{brown1992class}, Latent Semantic Indexing (LSI) topics \cite{deerwester1990indexing}, and loglinear skip-gram models \cite{mikolov2013efficient} on the resulting character n-grams. The representation vectors were trained on subsets of Wikipedia consisting of the first 12 million words (or $10^8$ characters) referred to as {\it Wiki8} and 125 million words ($10^9$ characters) referred to as {\it Wiki9}. 
-Representation vectors were trained varying certain parameters: n-gram size, cluster size, and term frequency cut-offs for all models.
+In order to learn the representation vectors, the text was preprocessed by removing punctuation and extra whitespace, replacing numbers with their single digit word (`one', `two', etc.), and lowercasing all text. Character n-grams including whitespace were then generated from this text. We then trained Brown Clusters \cite{brown1992class}, Latent Semantic Indexing (LSI) topics \cite{deerwester1990indexing}, and log linear skip-gram models \cite{mikolov2013efficient} on the resulting character n-grams. The representation vectors were trained on subsets of Wikipedia consisting of the first 12 million words (or $10^8$ characters) referred to as {\it Wiki8} and 125 million words ($10^9$ characters) referred to as {\it Wiki9}. In relation to the overall system pipeline this can be considered an unsupervised training step.
+The representation vectors were trained varying certain parameters: n-gram size, cluster size, and term frequency cut-offs for all models.
 For log linear skip-gram models our intuition is that a larger skip-gram context is needed than the 5 or 10 wide skip-grams 
 used to train word-based representations due to the smaller term vocabulary and dependency between adjacent n-grams.
  For these measures, we trained models using skip-gram widths of 25 or 50 terms. 
